RbA Build/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>AR_Age__c</fullName>
        <description>Number of days since the revenue was recognized.</description>
        <formula>IF( Amount_Due__c &gt; 0 &amp;&amp;  !ISBLANK(Revenue_Recognized_Date__c),TODAY()- Revenue_Recognized_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the revenue was recognized.</inlineHelpText>
        <label>AR Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR_Reason__c</fullName>
        <label>AR Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Collections - Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Shared Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections - Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing - Service Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing - Waiting for Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Stain Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Projects</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AR_Write_Off__c</fullName>
        <label>AR-Write Off $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <description>Created for UI purposes in creating a Service Request. Used on the page for selecting a Sold Order, formatted date to remove 00:00:00 time.</description>
        <formula>TEXT( MONTH((EffectiveDate) ) ) &amp; &quot;/&quot; &amp; TEXT( DAY((EffectiveDate)) ) &amp; &quot;/&quot; &amp; TEXT( YEAR((EffectiveDate) ) )</formula>
        <label>Activated Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <description>The amount due on the order. It&apos;s different depending on if it&apos;s a service order or regular order.</description>
        <formula>IF( Validate_Service_Order__c,  Invoice_Subtotal__c + Sales_Tax__c + Amount_Refunded__c - Payments_Received__c - Business_Adjustments__c + Non_Sufficient_Funds__c, Retail_Total__c - Payments_Received__c + Sales_Tax__c + Amount_Refunded__c - Business_Adjustments__c + Non_Sufficient_Funds__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount due on the order. It&apos;s different depending on if it&apos;s a service order or regular order.</inlineHelpText>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Amount Financed</label>
        <summarizedField>Order_Financing__c.Amount_Financed__c</summarizedField>
        <summaryForeignKey>Order_Financing__c.Related_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <description>The total amount refunded to the customer.</description>
        <inlineHelpText>The total amount refunded to the customer.</inlineHelpText>
        <label>Amount Refunded</label>
        <summarizedField>Refund__c.Amount__c</summarizedField>
        <summaryForeignKey>Refund__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_due_on_Account__c</fullName>
        <inlineHelpText>This is a holding field - need to figure out where this amount will come from.</inlineHelpText>
        <label>Amount due on Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apex_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set within the order trigger handler to allow the order status to change. Otherwise, a validation rule blocks changing the order status.</description>
        <label>Apex Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bay_Bow_Cost_Rollup__c</fullName>
        <label>Bay Bow Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bay_Bow_Rollup__c</fullName>
        <description>The rollup of the number of bay / bow products on this order.</description>
        <inlineHelpText>The rollup of the number of bay / bow products on this order.</inlineHelpText>
        <label>Bay Bow</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bay_Bow_Sales_Rollup__c</fullName>
        <label>Bay Bow Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_Home_Phone__c</fullName>
        <formula>BillToContact.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Tax_Amount__c</fullName>
        <description>Rollup - calculates the billable amount on all child OrderItems where Customer Pickup = Yes</description>
        <inlineHelpText>Rollup - calculates the billable amount on all child OrderItems where Customer Pickup = Yes</inlineHelpText>
        <label>Billable Tax Amount</label>
        <summarizedField>OrderItem.Billable_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Customer_Pickup__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Used for UI purposes</description>
        <formula>BillingStreet + BR() +
BillingCity +&quot;, &quot;+ BillingState +&quot; &quot;+ BillingPostalCode+BR()+
 BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup of all records of type install adjustment or AR Write-off.</description>
        <inlineHelpText>Rollup of all records of type install adjustment or AR Write-off.</inlineHelpText>
        <label>Business Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Eligible__c</fullName>
        <description>Determines if the order / service request is eligible for cancellation. For Service Requests this is used in the view service request page to determine if the service request should be cancelled. For CORO Record Types, this value is sent to rSuite to tell them if the order can be cancelled or not.</description>
        <formula>IF( (RecordType.DeveloperName = &apos;CORO_Record_Type&apos;), ( ISPICKVAL(Status, &apos;Draft&apos;) ||   ISPICKVAL(Status, &apos;Tech Measure Needed&apos;) || ISPICKVAL(Status, &apos;Tech Measure Scheduled&apos;)), 
  IF((RecordType.DeveloperName = &apos;CORO_Service&apos;), (DATEVALUE(CreatedDate) = Today()),
  IF((RecordType.DeveloperName = &apos;ARO_Record_Type&apos;), (ISBLANK(Revenue_Recognized_Date__c)),
  IF((RecordType.DeveloperName = &apos;Change_Order&apos;), (ISBLANK(Revenue_Recognized_Date__c)),  (ISBLANK(Revenue_Recognized_Date__c)))
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Product Option Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makeability Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA/Historical Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSWP Test Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Order_Amount_Financed__c</fullName>
        <description>Rollup of amount financed from change orders</description>
        <inlineHelpText>Rollup of amount financed from change orders</inlineHelpText>
        <label>Change Order Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Finance_Fees__c</fullName>
        <description>Rollup of finance fees from change orders</description>
        <inlineHelpText>Rollup of finance fees from change orders</inlineHelpText>
        <label>Change Order Finance Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Total__c</fullName>
        <description>JETT-2305 Change Order Total</description>
        <inlineHelpText>The rollup of the retail total of all change orders linked to this order.</inlineHelpText>
        <label>Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments_and_Questions__c</fullName>
        <label>Comments and Questions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Pickup_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Customer Pickup to &quot;Yes&quot; when checked for all Order Items, which impacts Billing amounts</description>
        <inlineHelpText>Sets Customer Pickup to &quot;Yes&quot; when checked for all Order Items, which impacts Billing amounts</inlineHelpText>
        <label>Customer Pickup - All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sat_Survey_Run__c</fullName>
        <description>Date_Sat_Survey_Run</description>
        <label>Date Sat Survey Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_On_Hold__c</fullName>
        <description>If the status is on hold then this is Today - the date the order went on hold. Otherwise it is 0.</description>
        <formula>IF(ISPICKVAL( Status , &apos;On Hold&apos;),  NOW() - Time_On_Hold__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the status is on hold then this is Today - the date the order went on hold. Otherwise it is 0.</inlineHelpText>
        <label>Days On Hold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>Today()- EffectiveDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount2__c</fullName>
        <formula>Discount_Amount__c * -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Finance Reports</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>A roll-up sum of all discounts applied to this order (see the order discount related list).</description>
        <inlineHelpText>A roll-up sum of all discounts applied to this order (see the order discount related list).</inlineHelpText>
        <label>Discount Amount</label>
        <summarizedField>Order_Discount__c.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Discount__c.Status__c</field>
            <operation>equals</operation>
            <value>Applied</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Discount__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>Discount_Amount__c/Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Door_Cost_Rollup__c</fullName>
        <label>Door Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Door_Rollup_Including_Entry_Doors__c</fullName>
        <formula>Door_Rollup__c + Entry_Door_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Door Rollup Including Entry Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Door_Rollup__c</fullName>
        <description>Rollup of the quantity of doors on the order.</description>
        <inlineHelpText>Rollup of the quantity of doors on the order.</inlineHelpText>
        <label>Door Rollup</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Door_Sales_Rollup__c</fullName>
        <label>Door Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Doors_COGS__c</fullName>
        <label>Doors COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Door_Cost_Rollup__c</fullName>
        <label>Entry Door Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entry_Door_Rollup__c</fullName>
        <description>The rollup of the number of entry door products on this order.</description>
        <inlineHelpText>The rollup of the number of entry door products on this order.</inlineHelpText>
        <label>Entry Door</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entry_Door_Sales_Rollup__c</fullName>
        <label>Entry Door Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Install_Duration__c</fullName>
        <description>Estimated Installation Duration in hours</description>
        <inlineHelpText>Select the estimated install duration (hours)</inlineHelpText>
        <label>Estimated Install Duration</label>
        <picklist>
            <picklistValues>
                <fullName>½</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1½</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2½</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3½</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4½</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <inlineHelpText>Set by the most recent Purchase Order Estimated Ship Date</inlineHelpText>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Labor__c</fullName>
        <label>External Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_Cost_Rollup__c</fullName>
        <label>FF Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_Rollup__c</fullName>
        <description>Rollup of the quantity of full frame windows on the order.</description>
        <inlineHelpText>Rollup of the quantity of full frame windows on the order.</inlineHelpText>
        <label>FF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Sales_Rollup__c</fullName>
        <label>FF Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Fees__c</fullName>
        <formula>Finance_Program_Fees__c / Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Fees %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Program_Fees__c</fullName>
        <description>A rollup of all of the financing fees applied to this order.</description>
        <inlineHelpText>A rollup of all of the financing fees applied to this order.</inlineHelpText>
        <label>Finance Program Fees</label>
        <summarizedField>Order_Financing__c.Program_Fee__c</summarizedField>
        <summaryForeignKey>Order_Financing__c.Related_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Financed_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financed Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA_Status__c</fullName>
        <inlineHelpText>Set by related HOA Work Order</inlineHelpText>
        <label>HOA Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOS_Recommended_Score__c</fullName>
        <description>HOS Score being sent back from Modern Survey</description>
        <inlineHelpText>HOS Score being sent back from Modern Survey</inlineHelpText>
        <label>HOS Recommended Score</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOS_Sent_Date__c</fullName>
        <label>HOS Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOS_Survey_Link__c</fullName>
        <label>HOS Survey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOS_Survey_Returned_On__c</fullName>
        <description>The date the survey was returned.</description>
        <inlineHelpText>The date the survey was returned</inlineHelpText>
        <label>HOS Survey Returned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasProducts__c</fullName>
        <formula>IF( NumberProducts__c &gt; 0, &quot;Products&quot;, &quot;No Products&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasProducts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical_Status__c</fullName>
        <inlineHelpText>Set by related Historical Work Order</inlineHelpText>
        <label>Historical Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IF_Rollup_Cost__c</fullName>
        <label>IF Rollup Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IF_Rollup_Sales__c</fullName>
        <label>IF Rollup Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IF_Rollup__c</fullName>
        <description>Rollup of the quantity of insert frame windows on the order.</description>
        <inlineHelpText>Rollup of the quantity of insert frame windows on the order.</inlineHelpText>
        <label>IF</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Incident Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Initial_Discount__c</fullName>
        <label>Initial Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Labor__c</fullName>
        <label>Initial Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Subtotal__c</fullName>
        <label>Initial Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Complete_Date__c</fullName>
        <description>Installation Date of the related Sold Order</description>
        <formula>Sold_Order__r.Installation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installation Date of the related Sold Order</inlineHelpText>
        <label>Install Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Crew_Size__c</fullName>
        <formula>Primary_Installer__r.Crew_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Crew Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Day_of_Appmt__c</fullName>
        <label>Install Day of Appmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Notes__c</fullName>
        <label>Install Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Order_Status__c</fullName>
        <inlineHelpText>Set by status of related Install Work Order</inlineHelpText>
        <label>Install Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>To be scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Ship_Date_Conflict__c</fullName>
        <formula>Installation_Date__c &lt; Estimated_Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the Installation Date is prior to the Estimated Ship Date</inlineHelpText>
        <label>Install/Ship Date Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Date_Complete__c</fullName>
        <inlineHelpText>This will populate from the Install Work Order

This is a holding field for now.</inlineHelpText>
        <label>Installation Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>Updated via Declarative Lookups</description>
        <inlineHelpText>Installation Date Time pulled from Scheduled Appt Date/Time: Install from Installation Work Order</inlineHelpText>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Margin__c</fullName>
        <formula>Retail_Total__c - Product_Cost__c - Labor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Labor__c</fullName>
        <label>Internal Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <label>Invoice Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Subtotal__c</fullName>
        <description>Calculates Billable Amount for all Order Products where the Quote Amount is Accepted</description>
        <inlineHelpText>Calculates Billable Amount for all Order Products where the Quote Amount is Accepted</inlineHelpText>
        <label>Invoice Subtotal</label>
        <summarizedField>OrderItem.Billable_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Quote_Accepted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <description>Adds tax to subtotal for total amount. Note that amounts are contingent upon Order Products having the Quote Accepted and Customer Pickup = Yes/No. There is no sales tax if Customer Pickup = No</description>
        <formula>Invoice_Subtotal__c + Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adds tax to subtotal for total amount. Note that amounts are contingent upon Order Products having the Quote Accepted and Customer Pickup = Yes/No. There is no sales tax if Customer Pickup = No</inlineHelpText>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Close_Date__c</fullName>
        <label>Job Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_in_Progress_All_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this Order EVER been a Job in Progress?</inlineHelpText>
        <label>Job in Progress - All Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_in_Progress_Before_Install__c</fullName>
        <formula>AND(DATEVALUE(CreatedDate) &lt; Sold_Order__r.Installation_Date__c, RecordType.DeveloperName  = &apos;CORO_Service&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job in Progress - Before Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jobs__c</fullName>
        <description>This is a reporting field that is simply set to 1 for the number of jobs. This is needed to count up the number of jobs</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a reporting field that is simply set to 1 for the number of jobs. This is needed to count up the number of jobs</inlineHelpText>
        <label>Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSWP_Status__c</fullName>
        <inlineHelpText>Set by related LSWP work order</inlineHelpText>
        <label>LSWP Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSWP_Test_Results__c</fullName>
        <inlineHelpText>Set by LSWP Work Order</inlineHelpText>
        <label>LSWP Test Results</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Cost_Percentage__c</fullName>
        <formula>Labor__c / Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_Work_Practices_Reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Safe Work Practices Reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Service_Tech__c</fullName>
        <inlineHelpText>This will be pulled from the Work Order</inlineHelpText>
        <label>Lead Service Tech</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Stainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Tech_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Tech Measure</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Service_Request__c</fullName>
        <description>For Service Requests, if status is in a Warranty status or Closed, the Service Request is locked. This field is used for UI purposes on VF pages to hide items if the request is locked.</description>
        <formula>AND(RecordType.DeveloperName = &quot;CORO_Service&quot;,
(OR(ISPICKVAL(Status, &quot;Warranty Submitted&quot;),
 ISPICKVAL(Status, &quot;Warranty Accepted&quot;),
 ISPICKVAL(Status, &quot;Warranty Rejected&quot;),
 ISPICKVAL(Status, &quot;Closed&quot;))))</formula>
        <label>Lock Service Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Makeability_Errors__c</fullName>
        <description>Results of checking the makeability of all related order items.</description>
        <inlineHelpText>Results of checking the makeability of all related order items. (Use Check Makeability button).</inlineHelpText>
        <label>Makeability Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin_Percentage__c</fullName>
        <formula>Installation_Margin__c / Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>